added email recover password feature

--- a/server/mailer/email.jade
+++ b/server/mailer/email.jade
@@ -1,6 +1,8 @@
 doctype html
 html
   head
-    title my jade template
+    title Password recovery
   body
-    h1 Hello
+    h1 Here are your login info
+    p Username: #{username}
+    p Password: #{password}
